# mcoplib

./: .gitignore  CLAUDE.md  CMakeLists.txt  MANIFEST.in  README.md  README_CN.md  env.sh  pyproject.toml  setup.py
Skills/mxbench_op_test/: skill.md
Skills/optimized-cuda-kernels/: SKILL.md
benchmark/: README.md  build_env.sh  mcoplib_mxbenchmark_op_wrapper.py  mcoplib_mxbenchmark_ops.py  testall.py
benchmark/config/: apply_repetition_penalties.json  apply_shuffle_mul_sum.json  awq_dequantize.json  awq_gemm.json  awq_to_gptq_4bit.json  batched_moe_align_block_size.json  batched_rotary_embedding.json  build_tree_kernel_efficient.json  concat_and_cache_mla.json  convert_fp8.json  convert_vertical_slash_indexes.json  convert_vertical_slash_indexes_mergehead.json  copy_blocks.json  copy_blocks_mla.json  cp_gather_cache.json  cp_gather_indexer_k_cache.json  cp_gather_indexer_k_quant_cache.json  cutlass_scaled_mm.json  cutlass_scaled_mm_azp.json  cutlass_scaled_mm_supports_fp4.json  cutlass_scaled_mm_supports_fp8.json  dynamic_scaled_int8_quant.json  fatrelu_and_mul.json  fused_add_rms_norm.json  fused_add_rms_norm_static_fp8_quant.json  fused_bias_dropout.json  fused_moe_gate_opt.json  fused_rope_fwd.json  fused_silu_mul_dq_quant_interface.json  gather_and_maybe_dequant_cache.json  gelu_and_mul.json  gelu_new.json  gelu_tanh_and_mul.json  get_cuda_view_from_cpu_tensor.json  gptq_gemm.json  gptq_shuffle.json  indexer_k_cache.json  mctlass_moe_w4a16_gemm_kernel_mnk.json  merge_attn_states.json  moe_align_block_size.json  (+35 more)
benchmark/mxbench_acc/: fused_bias_dropout.py
benchmark/native_test/: silu_and_mul.py
benchmark/runners/: __init__.py  mcoplib_mxbenchmark_apply_repetition_penalties_runners.py  mcoplib_mxbenchmark_apply_shuffle_mul_sum_runners.py  mcoplib_mxbenchmark_awq_dequantize_runners.py  mcoplib_mxbenchmark_awq_gemm_runners.py  mcoplib_mxbenchmark_awq_to_gptq_4bit_runners.py  mcoplib_mxbenchmark_batched_moe_align_block_size_runners.py  mcoplib_mxbenchmark_batched_rotary_embedding_runners.py  (+77 more)
cmake/: utils.cmake
common/: mcoplib_ops_params_dump.hpp  mcoplib_ops_params_info.hpp
include/: all_reduce.h  common.cuh  fused_add_gemma_rmsnorm_per_token_quant_padding_output.h  fused_add_layernorm_per_token_quant_padding_output.h  fused_bias_dropout.h  fused_bias_swiglu.h  fused_gelu.h  fused_moe_gate_deepseek.h  fused_moe_gate_opt.h  fused_repeat_kv.h  fused_rms_norm_dq.h  fused_rope.h  fused_softplus_sqrt.h  glm_attention_prepare.h  gptq_marlin.h  hgemm_gptq.h  int8_quant_kernel.h  moe_gather.h  moe_scatter_dynamic_quant.h  moe_softmax_topk.h  moe_swiglu_dq.h  per_token_cast_to_fp8.h  recv_from_attention_node_post_process.h  rms_norm_dynamic_per_token_quant.h  rope_train.h  rotary_embedding.h  scale_dynamic_quant.h  send_to_attention_node_pre_process.h  store_kv.h
kernel/: all_reduce_kernel.cuh  dispatch_utils.h  fused_bias_dropout_kernel.h  fused_bias_swiglu_kernel.h  fused_gelu_kernel.h  fused_moe_gate.cuh  fused_moe_gate_deepseek.cuh  fused_repeat_kv_kernel.h  fused_rope_kernel.h  gptq_marlin.cuh  moe_softmax_topk.cuh  rms_norm_vllm.cuh  utils.cuh  utils.h
mcoplib/: __init__.py  custom_ops.py  fused_bias_dropout.py  fused_bias_swiglu.py  fused_gelu.py  fused_mla.py  fused_repeat_kv.py  fused_router_drop.py  marlin_24_perms.py  marlin_perms.py  profiler.py  triton_fused_moe.py
mxbench/: CMakeLists.txt  README_MXBENCH.md  all_reduce.cc  env.sh  softmax_benchmark.cu
op/: all_reduce.cu  fp8_quantize_kernel.cu  fused_add_gemma_rmsnorm_per_token_quant_padding_output.cu  fused_add_layernorm_per_token_quant_padding_output.cu  fused_bias_dropout.cu  fused_bias_gelu.cu  fused_bias_swiglu.cu  fused_moe_gate_deepseek.cu  fused_repeat_kv.cu  fused_rms_norm_dq.cu  fused_rope.cu  fused_softplus_sqrt.cu  glm_attention_prepare.cu  gptq_marlin.cu  int8_quant_kernels.cu  moe_fused_gate_opt.cu  moe_gather.cu  moe_scatter_dynamic_quant.cu  moe_softmax_topk.cu  moe_swiglu_dq.cu  pybind.cpp  recv_from_attention_node_post_process.cu  rms_norm_dynamic_per_token_quant.cu  rope_train.cu  rotary_embedding.cu  scale_dynamic_quant.cu  send_to_attention_node_pre_process.cu  store_kv.cu
op/cv/: CMakeLists.txt
op/cv/csrc/: arithm.cu  calsum.cu  countNozero.cu  meanstdev.cu  postprocess.cu  preprocess.cu  split.cu
op/cv/include/: arithm.h  calsum.h  count_nozero.h  meanstdev.h  process_interface.h  split.h  utils.h
requirements/: build.txt  packages.txt
unit_test/: fused_bias_gelu.py  measure_cuda.py  test_add_rms_norm_quant_padding_optional_residual.py  test_all_reduce.py  test_bias_dropout.py  test_bias_swiglu.py  test_concat_mla_q.py  test_dq_profile.py  test_fp8_silu_mul.py  test_fused_add_rms_norm.py  test_fused_add_rms_norm_custom.py  test_fused_append_shared_experts.py  test_fused_mla.py  test_fused_mla_absorb_rope.py  test_fused_mla_rope.py  test_fused_moe_gate_deepseek.py  test_fused_moe_gate_opt.py  test_fused_moe_gate_opt_acc.py  test_fused_rms_norm_dq.py  test_fused_softplus_sqrt.py  test_gemma_rms_norm_dynamic_per_token_quant_padding_output.py  test_gptq_marlin_gemm.py  test_grouped_topk.py  test_head_rms_norm.py  test_large_context_topk.py  test_lmdeploy_rotary_embedding.py  test_moe_softmax_topk.py  test_moe_sum_reduce_triton.py  test_moe_swiglu_dq.py  test_paged_attention_v1.py  test_per_token_cast_tof8.py  test_profile_silu_quant.py  test_profiler.py  test_repeat_kv.py  test_reshape_and_cache_new.py  test_rms_norm.py  test_rms_norm_custom.py  test_rope.py  test_rope_train.py  test_router_drop.py  (+14 more)
unit_test/cpp/: CMakeLists.txt  test_process.cpp
(+418 files in other folders)
